--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^4.1.3",
     "framer-motion": "^12.29.2",
+    "graphql": "^16.12.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
